--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <dockerHost>unix:///Users/mostaphamegaiz/.docker/run/docker.sock</dockerHost>
+                    <dockerHost>unix:///var/run/docker.sock</dockerHost>
                     <verbose>true</verbose>
                     <!-- log-settings -->
                     <useColor>true</useColor>
