--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -6,42 +6,42 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_DB: springuru
+      # Postgres liest das Passwort direkt aus der Secret-Datei
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
     secrets:
       - postgres_password
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
-      - spring-net
+      - backend-net
     deploy:
       placement:
         constraints:
           - node.role == manager
 
   app:
-    image: megmus/springbootdocker:latest
+    image: megmus/springbootdocker:1.0.2
     ports:
       - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/springuru
       - SPRING_DATASOURCE_USERNAME=admin
-      # Dieser Import-Befehl sagt Spring: Schau in den Secret-Ordner!
-      - SPRING_CONFIG_IMPORT=optional:configtree:/run/secrets/
-      # Spring sucht nun nach einer Datei namens 'postgres_password' im Ordner
-      # und macht daraus die Property 'postgres.password'
-      - SPRING_DATASOURCE_PASSWORD=${postgres_password}
+      # Der offizielle Spring-Weg für Docker Secrets
+      - SPRING_DATASOURCE_PASSWORD_FILE=/run/secrets/postgres_password
     secrets:
       - postgres_password
     networks:
-      - spring-net
+      - backend-net
     deploy:
-      replicas: 2
+      replicas: 3
+      restart_policy:
+        condition: on-failure
       update_config:
         parallelism: 1
         delay: 10s
 
 networks:
-  spring-net:
+  backend-net:
     driver: overlay
 
 secrets:
