--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>guru.springframework</groupId>
 	<artifactId>spring-boot-docker</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>spring-boot-docker</name>
@@ -239,14 +239,13 @@
                                     <POSTGRES_USER>admin</POSTGRES_USER>
                                     <POSTGRES_PASSWORD>${it.db.password}</POSTGRES_PASSWORD>
                                     <POSTGRES_DB>springuru</POSTGRES_DB>
-									<POSTGRES_HOST_AUTH_METHOD>trust</POSTGRES_HOST_AUTH_METHOD>
                                 </env>
                                 <ports>
-                                    <port>it.db.port:5432</port>
+                                    <port>5432:5432</port>
                                 </ports>
                                 <wait>
-									<time>30000</time>
                                     <log>database system is ready to accept connections</log>
+                                    <time>20000</time>
                                 </wait>
                             </run>
                         </image>
@@ -254,6 +253,9 @@
                             <name>${docker.image.prefix}/${docker.name}</name>
                             <build>
                                 <from>eclipse-temurin:21-jre</from>
+                                <platforms>
+                                    <platform>linux/amd64</platform>
+                                </platforms>
                                 <assembly>
                                     <descriptorRef>artifact</descriptorRef>
                                 </assembly>
