--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,42 @@
-name: Maven Release and Docker Push
+name: Maven Release
 
 on:
-  workflow_dispatch: # Ermöglicht manuelles Starten des Release-Prozesses
+  workflow_dispatch: # Ermöglicht den manuellen Start über den "Run workflow" Button
 
 jobs:
   release:
+    name: Perform Release
     runs-on: ubuntu-latest
+    
+    # WICHTIG: Erlaubt Maven das Hochladen von Paketen und das Erstellen von Tags
+    permissions:
+      contents: write
+      packages: write
+
     steps:
-      - name: Checkout Code
+      - name: Checkout Source Code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Wichtig für das Release-Plugin (Git-History)
+          fetch-depth: 0 # Holt die gesamte Historie für das Tagging
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-          server-id: docker.io # ID für Docker Hub Credentials in der settings.xml
-          server-username: DOCKER_USERNAME
-          server-password: DOCKER_PASSWORD
+          # Erstellt die settings.xml, damit Maven das GITHUB_TOKEN für die ID "github" nutzt
+          server-id: github 
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
 
-      - name: Configure Git
+      - name: Configure Git User
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
 
-      - name: Prepare and Perform Release
+      - name: Execute Maven Release
+        # -B für Batch-Mode (keine interaktiven Fragen)
+        # -Darguments gibt das DB-Passwort an die Integrationstests weiter
+        run: mvn -B release:prepare release:perform -Darguments="-Dit.db.password=nimda"
         env:
-          # Hier ziehen wir die Secrets aus GitHub und geben sie Maven mit
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
-          # Passwort für die Integrationstests (IT)
-          IT_DB_PASSWORD: ${{ secrets.IT_DB_PASSWORD }}
-        run: |
-          mvn -B release:prepare release:perform \
-            -Darguments="-Dit.db.password=$IT_DB_PASSWORD -Ddocker.push.registry=docker.io" \
-            -Ddocker.username=$DOCKER_USERNAME \
-            -Ddocker.password=$DOCKER_PASSWORD
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
